@@ -469,6 +469,7 @@ static void fm_app_config_init(FmAppConfig *cfg)
     cfg->splitter_pos = 150;
     cfg->max_tab_chars = 32;
     cfg->media_in_new_tab = FALSE;
+    cfg->desktop_folder_new_win = FALSE;
 
     cfg->side_pane_mode = FM_SP_PLACES;
 
@@ -599,6 +600,7 @@ void fm_app_config_load_from_key_file(FmAppConfig* cfg, GKeyFile* kf)
     fm_key_file_get_int(kf, "ui", "splitter_pos", &cfg->splitter_pos);
 
     fm_key_file_get_bool(kf, "ui", "media_in_new_tab", &cfg->media_in_new_tab);
+    fm_key_file_get_bool(kf, "ui", "desktop_folder_new_win", &cfg->desktop_folder_new_win);
 
 #if FM_CHECK_VERSION(1, 2, 0)
     tmp_int = FM_SP_NONE;
@@ -977,6 +979,7 @@ void fm_app_config_save_profile(FmAppConfig* cfg, const char* name)
         g_string_append_printf(buf, "win_height=%d\n", cfg->win_height);
         g_string_append_printf(buf, "splitter_pos=%d\n", cfg->splitter_pos);
         g_string_append_printf(buf, "media_in_new_tab=%d\n", cfg->media_in_new_tab);
+        g_string_append_printf(buf, "desktop_folder_new_win=%d\n", cfg->desktop_folder_new_win);
 #if FM_CHECK_VERSION(1, 2, 0)
         g_string_append(buf, "side_pane_mode=");
         if (cfg->side_pane_mode & FM_SP_HIDE)
