@@ -95,6 +95,10 @@ Changes on 1.2.0 since 1.1.0:
     If set then automounted folder will be opened in new tab instead of
     new window.
 
+* Implemented new config option 'desktop_folder_new_win', defaulted to
+    false. If set then folder from desktop will be opened in new window
+    instead of new tab.
+
 
 Changes on 1.1.0 since 1.0.1:
 
